plugins {
  id 'java'
  id 'net.researchgate.release' version '3.0.2'
  id 'eclipse'
}

description """Simple datastructures and algorithms."""

allprojects {
  group = 'com.github.basking2'

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(8)
    }
  }

  ext.slf4jVersion = '2.0.7'
  ext.junit5Version = '5.10.0-M1'
  ext.releaseRepository = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
  ext.snapshotRepository = "https://oss.sonatype.org/content/repositories/snapshots/"

  repositories {
    mavenCentral()
    // jcenter()
    maven {
      url "https://plugins.gradle.org/m2"
    }
  }

  java {
    withJavadocJar()
    withSourcesJar()
  }
}

